--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:42:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:43:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -228,10 +228,10 @@ E thru 7</td>
 -4 thru 17</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 7</td>
-      <td>Brooks Koepka E
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka E
 E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 8</td>
     </tr>
@@ -252,18 +252,34 @@ E thru 9</td>
 +1 thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -4
 -4 (F)</td>
       <td>Scottie Scheffler -4
 -4 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Viktor Hovland E
 E thru 8</td>
-      <td>Brooks Koepka E
+      <td class="greyout leftborder">Brooks Koepka E
 E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
     </tr>
@@ -274,14 +290,62 @@ E thru 7</td>
 -4 thru 17</td>
       <td>Cameron Smith -4
 -4 (F)</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Billy Horschel E
 E thru 9</td>
-      <td>Brooks Koepka E
+      <td class="greyout leftborder">Brooks Koepka E
 E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Dustin Johnson(W) -3
+-3 thru 9</td>
+      <td>Corey Conners -1
+-1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Dustin Johnson -3
+-3 thru 9</td>
+      <td>Brooks Koepka(W) E
+E thru 7</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 8</td>
+      <td class="greyout">Adam Scott +1
++1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -294,10 +358,10 @@ E thru 7</td>
 -1 thru 12</td>
       <td>Jon Rahm(W) E
 E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland E
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout">Viktor Hovland E
 E thru 8</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -332,22 +396,6 @@ E thru 9</td>
 +2 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -380,54 +428,6 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Dustin Johnson(W) -3
--3 thru 9</td>
-      <td>Corey Conners -1
--1 thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Tony Finau -1
--1 thru 17</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Dustin Johnson -3
--3 thru 9</td>
-      <td>Brooks Koepka(W) E
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout">Adam Scott +1
-+1 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
@@ -444,36 +444,36 @@ E thru 9</td>
 +2 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 8</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -4
 -4 thru 17</td>
       <td>Corey Conners -1
 -1 thru 12</td>
+      <td>Patrick Cantlay(W) E
+E thru 9</td>
       <td>Viktor Hovland E
 E thru 8</td>
-      <td>Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +1
-+1 thru 8</td>
       <td class="greyout">Sam Burns +2
 +2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -482,12 +482,12 @@ E thru 7</td>
 -4 thru 17</td>
       <td>Corey Conners -1
 -1 thru 12</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Rory McIlroy E
 E thru 7</td>
-      <td>Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Robert MacIntyre +2
 +2 thru 14</td>
     </tr>
@@ -553,6 +553,22 @@ E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
       <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Viktor Hovland E
+E thru 8</td>
+      <td>Rory McIlroy E
+E thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 8</td>
+      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -668,20 +684,36 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Viktor Hovland E
 E thru 8</td>
-      <td>Rory McIlroy E
+      <td>Brooks Koepka E
 E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
++2 thru 8</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -690,14 +722,30 @@ E thru 7</td>
 -3 thru 9</td>
       <td>Rory McIlroy(W) E
 E thru 7</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Viktor Hovland E
 E thru 8</td>
-      <td>Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Xander Schauffele +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -748,52 +796,20 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Viktor Hovland E
-E thru 8</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
 -3 thru 9</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Viktor Hovland E
 E thru 8</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Jordan Spieth(W) +2
 +2 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 8</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -812,20 +828,20 @@ E thru 8</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Patrick Cantlay +1
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Viktor Hovland(W) E
+E thru 8</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td>Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -844,20 +860,20 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Viktor Hovland(W) E
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Viktor Hovland E
 E thru 8</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 9</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -874,22 +890,6 @@ E thru 7</td>
 +4 (F)</td>
       <td class="greyout">Justin Rose +4
 +4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E thru 8</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -924,6 +924,22 @@ E thru 9</td>
 +2 thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">0</td>
+      <td>Jon Rahm(W) E
+E thru 9</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -1
@@ -936,6 +952,22 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 8</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay(W) E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Rory McIlroy E
+E thru 7</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 8</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -972,22 +1004,6 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">1</td>
-      <td>Jon Rahm(W) E
-E thru 9</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
       <td>Tiger Woods -1
@@ -1004,20 +1020,20 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">1</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Rory McIlroy E
-E thru 7</td>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td>Patrick Cantlay(W) +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+      <td>Collin Morikawa(W) +2
++2 thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1036,20 +1052,20 @@ E thru 9</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">3</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Jon Rahm E
+      <td>Patrick Cantlay E
 E thru 9</td>
-      <td>Patrick Cantlay +1
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td>Collin Morikawa(W) +2
+      <td>Collin Morikawa +2
 +2 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 8</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
@@ -1065,22 +1081,6 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">4</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td>Xander Schauffele +1
-+1 thru 8</td>
-      <td>Collin Morikawa +2
-+2 thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
   </tbody>
