--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:42:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:43:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -154,6 +154,22 @@ body {
 +2 thru 10</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Tony Finau -1
+-1 thru 17</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -182,22 +198,6 @@ E thru 7</td>
 -1 thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Tony Finau -1
--1 thru 17</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -236,6 +236,22 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Rory McIlroy E
+E thru 7</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 8</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -252,34 +268,18 @@ E thru 8</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Rory McIlroy E
-E thru 7</td>
-      <td>Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
 -3 thru 9</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Viktor Hovland E
 E thru 8</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout">Jordan Spieth(W) +2
 +2 thru 8</td>
     </tr>
@@ -302,14 +302,14 @@ E thru 9</td>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-2</td>
-      <td>Sungjae Im -3
--3 thru 10</td>
+      <td>Sungjae Im -2
+-2 thru 11</td>
       <td>Viktor Hovland(W) E
 E thru 8</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
       <td class="greyout">Justin Thomas +4
@@ -317,19 +317,35 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Tony Finau -1
 -1 thru 17</td>
       <td>Jon Rahm(W) E
 E thru 9</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -1
+-1 thru 12</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Tyrrell Hatton +1
++1 thru 10</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -346,22 +362,6 @@ E thru 9</td>
 +2 thru 8</td>
       <td class="greyout">Robert MacIntyre +2
 +2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
--1 thru 12</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td>Tyrrell Hatton +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
