--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:49:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:50:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -918,10 +918,10 @@ E thru 7</td>
 +1 thru 8</td>
       <td>Sam Burns +2
 +2 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Rose +3
++3 thru 14</td>
+      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-      <td class="greyout">Justin Rose +4
-+4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
