--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:52:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:53:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,6 +156,22 @@ body {
 +2 thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 9</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 8</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -169,22 +185,6 @@ E thru 8</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 9</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 8</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -205,18 +205,66 @@ E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Will Zalatoris -2
 -2 thru 9</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td>Brooks Koepka E
-E thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-5</td>
+      <td>Will Zalatoris -2
+-2 thru 9</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Rory McIlroy E
+E thru 8</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 8</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-5</td>
+      <td>Dustin Johnson -4
+-4 thru 10</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Viktor Hovland E
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm E
+E thru 9</td>
+      <td class="greyout">Jordan Spieth(W) +2
 +2 thru 8</td>
     </tr>
     <tr>
@@ -252,68 +300,36 @@ E thru 8</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-4</td>
-      <td>Will Zalatoris -2
--2 thru 9</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Rory McIlroy E
-E thru 8</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 8</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson -4
--4 thru 10</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td>Viktor Hovland E
-E thru 8</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td class="greyout leftborder">Jon Rahm E
-E thru 9</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Sungjae Im -2
 -2 thru 11</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
       <td>Viktor Hovland(W) E
 E thru 8</td>
-      <td>Brooks Koepka E
-E thru 7</td>
       <td>Patrick Cantlay E
 E thru 9</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Jon Rahm(W) E
+E thru 9</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -332,22 +348,6 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Jon Rahm(W) E
-E thru 9</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 10</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
@@ -364,6 +364,22 @@ E thru 9</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">1</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Viktor Hovland(W) E
+E thru 8</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td>Collin Morikawa +2
++2 thru 10</td>
+      <td class="greyout leftborder">Patrick Reed +3
++3 thru 12</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -2
@@ -378,22 +394,6 @@ E thru 9</td>
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Viktor Hovland(W) E
-E thru 8</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Collin Morikawa +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Patrick Reed +3
-+3 thru 12</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
     </tr>
   </tbody>
 </table>
