--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:55:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:56:35 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -332,6 +332,22 @@ E thru 9</td>
 +2 thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners(W) -2
+-2 thru 13</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td>Robert MacIntyre +1
++1 thru 15</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -2
@@ -346,22 +362,6 @@ E thru 9</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -2
--2 thru 13</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Collin Morikawa +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Robert MacIntyre +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
