--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:00:54 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:01:37 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,22 +188,6 @@ E thru 8</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 10</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -3
@@ -213,11 +197,27 @@ E thru 9</td>
       <td>Brooks Koepka -1
 -1 thru 8</td>
       <td>Jon Rahm E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 10</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -236,36 +236,20 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Brooks Koepka -1
--1 thru 8</td>
-      <td>Rory McIlroy E
-E thru 8</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 9</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
 -4 thru 10</td>
       <td>Brooks Koepka -1
 -1 thru 8</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
       <td>Viktor Hovland E
 E thru 9</td>
-      <td class="greyout leftborder">Jon Rahm E
-E thru 9</td>
-      <td class="greyout">Jordan Spieth(W) +1
+      <td>Jon Rahm E
+E thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +1
 +1 thru 9</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -300,36 +284,36 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Rory McIlroy E
+E thru 8</td>
+      <td>Xander Schauffele +1
++1 thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-2</td>
       <td>Sungjae Im -2
 -2 thru 12</td>
       <td>Brooks Koepka -1
 -1 thru 8</td>
       <td>Viktor Hovland(W) E
 E thru 9</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Brooks Koepka -1
--1 thru 8</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Jon Rahm(W) E
-E thru 9</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -339,7 +323,7 @@ E thru 9</td>
       <td>Daniel Berger -1
 -1 (F)</td>
       <td>Jon Rahm E
-E thru 9</td>
+E thru 10</td>
       <td>Jordan Spieth +1
 +1 thru 9</td>
       <td class="greyout leftborder">Robert MacIntyre +1
@@ -348,14 +332,30 @@ E thru 9</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-1</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Jon Rahm(W) E
+E thru 10</td>
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 10</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners -2
 -2 thru 13</td>
       <td>Jon Rahm E
-E thru 9</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
+E thru 10</td>
+      <td>Patrick Cantlay +1
++1 thru 10</td>
       <td>Tyrrell Hatton +1
 +1 thru 10</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -369,7 +369,7 @@ E thru 9</td>
       <td>Corey Conners -2
 -2 thru 13</td>
       <td>Jon Rahm E
-E thru 9</td>
+E thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 9</td>
       <td>Jordan Spieth +1
@@ -387,7 +387,7 @@ E thru 9</td>
       <td>Viktor Hovland(W) E
 E thru 9</td>
       <td>Jon Rahm E
-E thru 9</td>
+E thru 10</td>
       <td>Collin Morikawa +2
 +2 thru 10</td>
       <td class="greyout leftborder">Patrick Reed +2
